# prospectIQ

./: .env.example  .gitignore  .mise.toml  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  INSIGHTS.md  MEMORY.md  Makefile  PRODUCT_OVERVIEW.md  Procfile  ProspectIQ_Design_Plan.docx  TODO.md  backfill_tranche_cluster.py  create_admin_user.py  governance_enforcement_trace.py  netlify.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  run_instantly_research.py  run_pipeline_loop.sh  run_research.py  run_sequence.py  send_path_self_test.py  synthetic_reply_end_to_end_test.py  weekend_run.py  zb_verify.py
.art/: INDEX.md  analytics-reporting.yaml  billing-quota.yaml  crm-sync.yaml  draft-personalization.yaml  hitl-approvals.yaml  lead-acq-enrichment.yaml  orchestration-pipeline.yaml  platform-security.yaml  qualification-scoring.yaml  reply-thread-meetings-linkedin.yaml  send-dispatch-pipeline.yaml
backend/: requirements.txt
billing_core/: asyncpg_adapter.py  stripe_ops.py  supabase_adapter.py  tier_plans.py
billing_sdk/: __init__.py  db_adapter.py  router_factory.py  tier_utils.py  types.py  webhook_handler.py
config/: competitors.yaml  content_guidelines.yaml  icp.yaml  limits.yaml  linkedin_messages_guidelines.yaml  manufacturing_ontology.yaml  offer_context.yaml  outreach_guidelines.yaml  outreach_templates_fb_fsma204.md  scoring.yaml  sequences.yaml  signal_weights.yaml  voice_spec.md
dashboard/: .env.local.example  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
(+594 files in other folders)
